has-diff: Show diff in submodules
Currently, the action just shows something like this when files in
submodules changed:

    Full unfiltered diff
      diff --git a/third_party/libhimmelblau b/third_party/libhimmelblau
      --- a/third_party/libhimmelblau
      +++ b/third_party/libhimmelblau
      @@ -1 +1 @@
      -Subproject commit daf8c3ab26700b0d5123c77bba5db90f184e5088
      +Subproject commit daf8c3ab26700b0d5123c77bba5db90f184e5088-dirty

Let's instead show the actual diff of submodules, making it easier to
debug unexpected diffs.

--- a/gh-actions/common/has-diff/action.yaml
+++ b/gh-actions/common/has-diff/action.yaml
@@ -65,7 +65,7 @@ runs:
 
         echo ""
         echo "::group::Full unfiltered diff"
-        git diff --ignore-cr-at-eol .
+        git diff --ignore-cr-at-eol --submodule=diff .
         echo "::endgroup::"
 
         if [ "${{ inputs.fail-on-diff }}" == true ]; then
