gh-actions/build-debian: Add missing "set -eux"

--- a/gh-actions/common/build-debian/action.yaml
+++ b/gh-actions/common/build-debian/action.yaml
@@ -169,6 +169,7 @@ runs:
         workdir: ${{ env.SOURCE_DIR }}
         shell: bash
         run: |
+          set -eux
           echo "::group::Install licenserecon"
           apt-get update
           apt-get install -y --no-install-recommends licenserecon
