Revert "gh-actions/build-debian: Run licenserecon"
Turns out that lintian already checks the licenses and it's really the
issues found by lintian which we care about (at least that is what
reviewers of uploads to the archive look at).

We just have to make the build-debian action fail when lintian fails
(done in #100) and pass `--fail-on error,warning` to lintian (possible
via the `lintian` input).

--- a/.github/workflows/test-build-deb.yaml
+++ b/.github/workflows/test-build-deb.yaml
@@ -42,7 +42,7 @@ jobs:
           set -eu
 
           echo "::group::Get source"
-          PKG=debianutils
+          PKG=hello
           pull-lp-source --download-only "$PKG"
           dpkg-source -x "$PKG"*.dsc pkg-src
           rm -rf "${PKG}_"*
@@ -120,7 +120,7 @@ jobs:
           # Get package source
           set -eu
 
-          PKG=debianutils
+          PKG=hello
           pull-lp-source --download-only "$PKG"
           dpkg-source -x "$PKG"*.dsc pkg-src
           rm -rfv "${PKG}_"*.{dsc,debian.}*
