gh-actions/go/code-sanity: Fix diff check
The check if go.mod or go.sum were updated didn't work because it didn't
pass fail-on-diff to the has-diff action.

--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -122,6 +122,7 @@ runs:
       uses: canonical/desktop-engineering/gh-actions/common/has-diff@main
       with:
         working-directory: ${{ inputs.working-directory }}
+        fail-on-diff: true
 
     - name: Ensure there is no diff between current and generated files
       if: ${{ always() }}
