gh-actions/print-summary: Also print summary to logs
When clicking on a failed check on a PR, the page that opens shows the
logs of the failed step, not the job summary page. So to make this
summary more useful, let's also print it to the logs.

--- a/gh-actions/common/print-summary/action.yaml
+++ b/gh-actions/common/print-summary/action.yaml
@@ -15,27 +15,29 @@ runs:
     - name: Print job summary
       shell: bash --noprofile --norc -euo pipefail {0}
       run: |
-        # Print job summary
+        # Print summary both to the job summary page and the logs
 
         print_status_line () {
           status=$1
 
-          icon=":question:"
           if [ "${status}" == "success" ]; then
-            icon=":green_circle:"
+            echo "| $2 | ✅ Success |" >> $GITHUB_STEP_SUMMARY
           elif [ "${status}" == "failure" ]; then
-            icon=":red_circle:"
+            echo "| $2 | ❌ Failure |" >> $GITHUB_STEP_SUMMARY
           elif [ "${status}" == "skipped" ]; then
-            icon=":white_circle:"
+            echo "| $2 | ⏭️ Skipped |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| $2 | ❓ Unknown status: ${status} |" >> $GITHUB_STEP_SUMMARY
           fi
-
-          echo "| $2 | ${icon} |" >> $GITHUB_STEP_SUMMARY
         }
 
         echo '### ${{ inputs.title }}' >> $GITHUB_STEP_SUMMARY
 
         echo "| Job | Status |" >> $GITHUB_STEP_SUMMARY
         echo "| --- | :---:  |" >> $GITHUB_STEP_SUMMARY
+
+        # Print the summary to the logs
+        cat "$GITHUB_STEP_SUMMARY"
 
         while IFS= read -r jobResult; do
             # Trim leading and trailing whitespaces
