--- a/gh-actions/common/print-summary/action.yaml
+++ b/gh-actions/common/print-summary/action.yaml
@@ -15,21 +15,20 @@ runs:
     - name: Print job summary
       shell: bash --noprofile --norc -euo pipefail {0}
       run: |
-        # Print job summary
+        # Print summary both to the job summary page and the logs
 
         print_status_line () {
           status=$1
 
-          icon=":question:"
           if [ "${status}" == "success" ]; then
-            icon=":green_circle:"
+            echo "| $2 | ✅ Success |" >> $GITHUB_STEP_SUMMARY
           elif [ "${status}" == "failure" ]; then
-            icon=":red_circle:"
+            echo "| $2 | ❌ Failure |" >> $GITHUB_STEP_SUMMARY
           elif [ "${status}" == "skipped" ]; then
-            icon=":white_circle:"
+            echo "| $2 | ⏭️ Skipped |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| $2 | ❓ Unknown status: ${status} |" >> $GITHUB_STEP_SUMMARY
           fi
-
-          echo "| $2 | ${icon} |" >> $GITHUB_STEP_SUMMARY
         }
 
         echo '### ${{ inputs.title }}' >> $GITHUB_STEP_SUMMARY
@@ -52,3 +51,6 @@ runs:
             name=${jobResult#*" "}
             print_status_line "${res}" "${name}"
         done <<< '${{ inputs.step-results }}'
+
+        # Print the summary to the logs
+        cat "$GITHUB_STEP_SUMMARY"
