--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,53 +3,9 @@
 
 version: 2
 updates:
-  ## We need to list each subdirectories in a separate section:
-  ## https://github.com/dependabot/dependabot-core/issues/6704
   - package-ecosystem: "github-actions"
-    directory: "/gh-actions/common/build-debian"
+    directory: "/gh-actions/*"
     schedule:
       interval: "weekly"
     commit-message:
       prefix: "deps(common-ci)"
-
-  - package-ecosystem: "github-actions"
-    directory: "/gh-actions/common/has-diff"
-    schedule:
-      interval: "weekly"
-    commit-message:
-      prefix: "deps(common-ci)"
-
-  - package-ecosystem: "github-actions"
-    directory: "/gh-actions/common/print-summary"
-    schedule:
-      interval: "weekly"
-    commit-message:
-      prefix: "deps(common-ci)"
-
-  - package-ecosystem: "github-actions"
-    directory: "/gh-actions/common/validate-pr-title"
-    schedule:
-      interval: "weekly"
-    commit-message:
-      prefix: "deps(common-ci)"
-
-  - package-ecosystem: "github-actions"
-    directory: "/gh-actions/go/code-sanity"
-    schedule:
-      interval: "weekly"
-    commit-message:
-      prefix: "deps(go-ci)"
-
-  - package-ecosystem: "github-actions"
-    directory: "/gh-actions/go/generate"
-    schedule:
-      interval: "weekly"
-    commit-message:
-      prefix: "deps(go-ci)"
-
-  - package-ecosystem: "github-actions"
-    directory: "/gh-actions/rust/code-sanity"
-    schedule:
-      interval: "weekly"
-    commit-message:
-      prefix: "deps(rust-ci)"
