WIP: setup tmate session

--- a/gh-actions/common/run-autopkgtest/action.yaml
+++ b/gh-actions/common/run-autopkgtest/action.yaml
@@ -142,6 +142,9 @@ runs:
 
         echo "::endgroup::"
 
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+
     - name: Run autopkgtest
       env:
         TERM: dumb
